# vitae

./: .dockerignore  .editorconfig  .env.example  .gitignore  .prettierignore  CLAUDE.md  CONVERSION_SUMMARY.md  DEVELOPMENT.md  DOCKER.md  DOCKER_MIGRATION_COMPLETE.md  DOCKER_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  RUST_API_IMPLEMENTATION_NOTES.md  WEB_CONVERSION_COMPLETE.md  clippy.toml  docker-build.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-run.sh  generate-icons.sh  init-db.sql  package-lock.json  package.json  prettier.config.js  test-e2e.sh  verify-docker-setup.sh
.github/workflows/: deploy.yml
docs/: deployment.md
docs/superpowers/plans/: 2026-03-30-phase1-foundation.md  2026-03-31-phase2a-document-pipeline.md  2026-03-31-phase3b-admin-ui.md  2026-04-02-phase3c-foundation.md  2026-04-04-phase3d-resume-pdf.md  2026-04-04-phase3e-polish-features.md
docs/superpowers/specs/: 2026-03-30-project-revival-design.md  2026-03-31-phase2a-document-pipeline-design.md  2026-03-31-phase3a-sites-generator-wiring-design.md  2026-03-31-phase3b-admin-ui-design.md  2026-04-02-phase3c-theme-design.md  2026-04-04-phase3d-resume-pdf-generation-design.md  2026-05-12-phase3e-b-deployment-design.md  phase4-e2e-testing-scope.md
project_standards/: Data Structure Specification.md  IMPLEMENTATION_PLAN.md  Product Requirements Document (PRD) - Professional Website Builder.md  Technical Specification.md  UI_UX Design Document.md
src-api/: .dockerignore  .env.example  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  schema.sql
src-api/app/: config.py  database.py  main.py  worker.py
src-api/app/middleware/: auth.py
src-api/app/models/: __init__.py  api_key.py  document.py  job_posting.py  profile.py  resume.py  site.py  user.py
src-api/app/routers/: auth.py  documents.py  job_postings.py  preview.py  profile.py  resumes.py  settings.py  sites.py
src-api/app/schemas/: auth.py  documents.py  job_postings.py  preview.py  profile.py  resume.py  settings.py
src-api/app/scripts/: create_user.py
src-api/app/services/: auth_service.py  document_parser.py  document_service.py  encryption_service.py  job_posting_service.py  llm_service.py  photo_service.py  profile_service.py  profile_tailor.py  profile_transform.py  resume_generator.py  resume_service.py  site_generator.py  username_validator.py
src-api/app/templates/resume/: base.css  base.html.j2  coral.css  coral.html.j2  jade.css  onyx.css  onyx.html.j2  plain.css  quartz.css  serene.css
src-api/migrations/: 20240101000000_initial.sql  env.py
src-api/migrations/versions/: 001_initial_users.py  002_documents.py  003_api_keys.py  004_add_cascade_deletes.py  007_username.py  008_job_postings.py  009_sites.py  010_resumes.py  011_profile_photo_path.py
src-api/src/: auth.rs  config.rs  crypto.rs  db.rs  document_parser.rs  error.rs  llm_client.rs  main.rs  middleware.rs  models.rs  types.rs  validator.rs
src-api/src/handlers/: ai.rs  auth.rs  files.rs  generate.rs  health.rs  mod.rs  settings.rs
src-api/tests/: conftest.py
src-api/tests/fixtures/: generate_fixtures.py  sample.docx  sample.md  sample.pptx  sample.xlsx
src-api/tests/integration/: test_api_keys.py  test_auth_flow.py  test_create_user.py  test_document_flow.py  test_job_posting_flow.py  test_model_list.py  test_profile_flow.py  test_site_flow.py
src-api/tests/unit/: test_auth_service.py  test_create_user.py  test_document_parser.py  test_document_service.py  test_encryption_service.py  test_job_posting_service.py  test_llm_service.py  test_photo_service.py  test_preview_router.py  test_profile_schema.py  test_profile_service.py  test_profile_tailor.py  test_profile_transform.py  test_registration_flag.py  test_resume_generator.py  test_resume_service.py  test_site_generator.py  test_username_validation.py
src-generator/: .dockerignore  .gitignore  Dockerfile  README.md  generate.js  next.config.js  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
src-generator/__tests__/primitives/: ConditionalRender.test.tsx  DateRange.test.tsx  Section.test.tsx
src-generator/app/: globals.css  layout.tsx  page.tsx
src-generator/sample-data/: showcase.json
src-tauri/: .dockerignore  Cargo.toml  Dockerfile  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: commands.rs  document_parser.rs  main.rs  storage.rs  types.rs
src-ui/: .dockerignore  .env.development  .env.example  .env.production  .eslintrc.json  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-ui/src/: App.css  App.tsx  index.css  main.tsx
(+111 files in other folders)
