[package]
name = "professional-website-builder-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework and async runtime
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono"] }

# Authentication and security
bcrypt = "0.15"
jsonwebtoken = "9.2"
aes-gcm = "0.10"
rand = "0.8"

# HTTP client for LLM APIs
reqwest = { version = "0.11", features = ["json", "blocking"] }

# File handling
multer = "3.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }

# Document parsing crates (ported from src-tauri)
comrak = "0.20"
docx-rs = "0.4"
pdf-extract = "0.7"
zip = "0.6"
quick-xml = "0.31"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Base64 for encoding
base64 = "0.21"
