[project]
name = "vitae-api"
version = "0.1.0"
description = "REST API for Vitae"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.18",
    "httpx>=0.28.0",
    "email-validator>=2.3.0",
    "arq>=0.26.0",
    "cryptography>=44.0.0",
    "markdown>=3.7",
    "beautifulsoup4>=4.12.0",
    "python-docx>=1.1.0",
    "pymupdf>=1.25.0",
    "openpyxl>=3.1.0",
    "python-pptx>=1.0.0",
    "litellm>=1.60.0",
    "weasyprint>=62.0",
    "pillow>=12.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "testcontainers[postgres]>=4.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
