[package]
name = "professional-website-builder"
version = "0.1.0"
description = "A desktop application for generating professional portfolio websites"
authors = ["Professional Website Builder Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-open", "fs-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
anyhow = "1.0"
thiserror = "1.0"

# Document parsing crates
comrak = "0.20"                    # Markdown parsing
docx-rs = "0.4"                    # Word document parsing
pdf-extract = "0.7"                # PDF text extraction
zip = "0.6"                        # For Office Open XML formats (.docx, .xlsx, .pptx)
quick-xml = "0.31"                 # XML parsing for Office formats

# Platform-specific dependencies for secure storage
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_Security_Credentials"] }

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = "3.0"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
